src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginDockContent.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

<DockPanel Height="450" Width="450" Background="yellow">

	<Button DockPanel.Dock="Bottom" Margin="-50" />
	<Button DockPanel.Dock="Right" Margin="-15,5,10,10" />
	<Button DockPanel.Dock="Left" Margin="-10,-20,-30,-40" />
	<Button DockPanel.Dock="Top" Height="100" Margin="-10,10" />
	<Button Margin="-19,0,0,-19" />

</DockPanel>

</Grid>
